# monads

./: LICENSE  README.md  pyproject.toml
monads/: result.py
