[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monads"
version = "1.0"
description = "Monad helper classes for python"
readme = "README.md"
authors = [{name = "lucas"}]

[tool.setuptools.packages.find]
include = ["monads", "monads.*"]

[project.urls]
repository = "https://github.com/lsfischer/monads"

# Mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true